tests/pos/bool04.fq

bind 1 bx : {v: int  | true }
bind 2 by : {v: bool | true }
bind 3 zz : {v: int  | $k1  }

constraint:
  env [ 2 ]
  lhs {v : int | true }
  rhs {v : int | $k1[bx := by] }
  id 1 tag []

constraint:
  env [ 2; 3 ]
  lhs {v : int | $k1    }
  rhs {v : int | 0 <= v }
  id 2 tag []

wf:
  env [1]
  reft {v : int | $k1 }
